examples/test/testpolicy18897.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18897
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key28: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value12
          key18: value4
          key24: value4
      podSelector:
        matchLabels:
          key19: value19
